force-app/main/default/objects/Promotional_Code__c/Promotional_Code__c.object-meta.xml
<CustomObject>
    <label>Promotional Code</label>
    <nameField>
        <label>Promotional Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Promotional Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>