force-app/main/default/objects/Promotional_Code__c/fields/Number_Allowed__c.field-meta.xml
<CustomField>
    <fullName>Number_Allowed__c</fullName>
    <label>Number Allowed</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>