force-app/main/default/objects/Promotional_Code__c/fields/Number_of_Valid_Codes__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Valid_Codes__c</fullName>
    <formula>Number_Allowed__c -  Number_Used__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Valid Codes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>