force-app/main/default/objects/Promotional_Code__c/fields/Number_Used__c.field-meta.xml
<CustomField>
    <fullName>Number_Used__c</fullName>
    <label>Number Used</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>