force-app/main/default/objects/Promotional_Code__c/fields/Valid_for_Memberships__c.field-meta.xml
<CustomField>
    <fullName>Valid_for_Memberships__c</fullName>
    <label>Valid for (Memberships)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CHH - Digital</fullName>
            </value>
            <value>
                <fullName>Complimentary</fullName>
            </value>
            <value>
                <fullName>Digital</fullName>
            </value>
            <value>
                <fullName>Honorary</fullName>
            </value>
            <value>
                <fullName>Overseas - Digital</fullName>
            </value>
            <value>
                <fullName>Paper</fullName>
            </value>
            <value>
                <fullName>Press Card Holder</fullName>
            </value>
            <value>
                <fullName>Senior Youth - Digital</fullName>
            </value>
            <value>
                <fullName>Staff</fullName>
            </value>
            <value>
                <fullName>Technical</fullName>
            </value>
            <value>
                <fullName>Temporary Overseas Membership</fullName>
            </value>
            <value>
                <fullName>Veteran - Digital</fullName>
            </value>
            <value>
                <fullName>Veteran Paper</fullName>
            </value>
            <value>
                <fullName>Vice President</fullName>
            </value>
            <value>
                <fullName>Youth - Digital</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>