force-app/main/default/objects/Promotional_Code__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Valid_From__c</columns>
    <columns>Expiry_Date__c</columns>
    <columns>Valid_for_Memberships__c</columns>
    <columns>Number_Allowed__c</columns>
    <columns>Number_Used__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>