force-app/main/default/objects/Promotional_Code__c/listViews/Instant_Membership_Packs_used.listView-meta.xml
<ListView>
    <fullName>Instant_Membership_Packs_used</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Valid_From__c</columns>
    <columns>Number_Allowed__c</columns>
    <columns>Number_Used__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Description__c</field>
        <operation>contains</operation>
        <value>IM Pack,Instant</value>
    </filters>
    <filters>
        <field>Number_Used__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Instant Membership Packs used</label>
</ListView>