force-app/main/default/objects/Promotional_Code__c/listViews/Manoeuvring_Bundle_Codes.listView-meta.xml
<ListView>
    <fullName>Manoeuvring_Bundle_Codes</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Expiry_Date__c</columns>
    <columns>Number_Used__c</columns>
    <columns>Valid_From__c</columns>
    <columns>Valid_for_Memberships__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Description__c</field>
        <operation>contains</operation>
        <value>Manoeuvring</value>
    </filters>
    <label>Manoeuvring Bundle Codes</label>
</ListView>