force-app/main/default/objects/Promotional_Code__c/listViews/RAC_Codes.listView-meta.xml
<ListView>
    <fullName>RAC_Codes</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Valid_From__c</columns>
    <columns>Expiry_Date__c</columns>
    <columns>Number_Used__c</columns>
    <columns>Valid_for_Memberships__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Description__c</field>
        <operation>contains</operation>
        <value>RAC</value>
    </filters>
    <label>RAC Codes</label>
</ListView>